plugins/kotlin/idea/tests/testData/multiplatform/kt44898/common/Base.kt
package sample

public abstract class <!LINE_MARKER("descr='Is subclassed by Concrete (sample) Press ... to navigate'")!>Base<!> : I {
    override suspend fun <A : Appendable> <!LINE_MARKER("descr='Implements function in I (sample) Press ... to navigate'")!>readUTF8LineTo<!>(out: A, limit: Int): Boolean {
        TODO("Not yet implemented")
    }
}